--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cryptojacking Detector</title>
+  <title>CryptoPatrol</title>
 </head>
 <body>
-  <h1>Cryptojacking Detector</h1>
+  <h1>CryptoPatrol</h1>
   <p>Status: <span id="status">No mining detected</span></p>
   <button id="refresh">Refresh</button>
   <script src="popup.js"></script>
