--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CryptoPatrol</title>
+  <title>Crypto Patrol</title>
+  <script src="popup.js"></script>
 </head>
 <body>
-  <h1>CryptoPatrol</h1>
-  <p>Status: <span id="status">No mining detected</span></p>
-  <button id="refresh">Refresh</button>
-  <script src="popup.js"></script>
+  <h1>System Metrics</h1>
+  <div id="cpuUsage">CPU: Loading...</div>
+  <div id="memoryUsage">Memory: Loading...</div>
 </body>
 </html>
